@@ -1,10 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.60 2005/01/30 03:33:21 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.61 2005/01/30 08:06:38 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
-  29 Jan 2005; Andrew Gaffnye <agaffney@gentoo.org>
+  30 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Deleting and recreating swap doesn't cause nastiness anymore.
+
+  29 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Shell for partition properties dialog. Added "working" Ok and Cancel
   buttons to PartProperties.py. Began moving code from Partitioning.py
   to PartProperties.py. Lots more code moved. All editing functionality
